--- a/404.html
+++ b/404.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Error 404 Not Found</title>
 
 
- <link rel="stylesheet" href="Style.css" type="text/css">
+ <link rel="stylesheet" href="style.css" type="text/css">
  <!-- cdn -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -26,7 +26,7 @@
   --text-color: #1f2937;
   --card-bg: #f3eded;
   --shadow: 2px 1px 5px rgba(0, 0, 0, 0.05);
-  --radius: 12px;
+  --radius: 0px;
   --font-main: 'Poppins', sans-serif;
   --hoverbg :#555;
 }
@@ -94,29 +94,29 @@ box-shadow: 2px 2px 4px black;
       <div class="Logo"><img src="Images/campusxchange-logo.svg" title="CampusXchange Logo"></div>
    </header>
 <div class="topnav" id="myTopnav">
-  <a href="Index.html" class="active">Home</a>
-   <div class="dropdown">
-    <button class="dropbtn">Handouts
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="Handouts/Notes.html">Notes</a>
-      <a href="Handouts/Blog.html">Blogs</a>
-      <a href="Handouts/Assignment.html">Programming Assignment</a>
-    </div>
-  </div>
+  <a href="index.html" class="active">Home</a>
    <div class="dropdown">
     <button class="dropbtn">Services
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="Services/Webdevelopment.html">Website Development</a>
-      <a href="Services/SEO.html">SEO</a>
+      <a href="services/webdevelopment.html">Website Development</a>
+      <a href="services/seo.html">SEO</a>
     </div>
   </div>
-  <a href="Internship.html">Mentorship & Internship</a>
-  <a href="About.html">About</a>
-  <a href="Lettalk.html" >Let's Talk</a>
+   <div class="dropdown">
+    <button class="dropbtn">Handouts
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="handouts/notes.html">Notes</a>
+      <a href="handouts/blog.html">Blogs</a>
+      <a href="handouts/assignment.html">Programming Assignment</a>
+    </div>
+  </div>
+  <a href="index.html">Mentorship & Internship</a>
+  <a href="about.html">About</a>
+  <a href="lettalk.html" >Let's Talk</a>
     <!--// mobile Togglebar ----------------------------------------------------------------------------------------->
  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
@@ -129,7 +129,7 @@ box-shadow: 2px 2px 4px black;
         <p>We're Sorry, but the page you requested isn't available right now. It might have been removed, renamed, or is temporarily unavailable.
 <br>
 Please try the following:</p>
-<a href="Index.html"><button>Go To Home Page !</button></a>
+<a href="index.html"><button>Go To Home Page !</button></a>
     </div>
 </main>
 <br>
@@ -143,15 +143,15 @@ Please try the following:</p>
 </div>
      <h3>Quick Links-</h3>
      <div  id="quicklinks">
-        <a href="#">Home</a>
-        <a href="#about-section">Notes</a>
-        <a href="#Courses-section">Blogs</a>
-        <a href="#Results-section">Assignment</a>
-        <a href="#Contact-section">Website Development</a>
-        <a href="#Contact-section">SEO</a>
-        <a href="#Contact-section">Internship</a>
-        <a href="#Contact-section">About us</a>
-        <a href="#Contact-section">Let's Talk</a>
+      <a href="index.html" class="active">Home</a>
+      <a href="services/webdevelopment.html">Website Development</a>
+      <a href="services/seo.html">SEO</a>
+      <a href="handouts/notes.html">Notes</a>
+      <a href="handouts/blog.html">Blogs</a>
+      <a href="handouts/assignment.html">Programming Assignment</a>
+      <a href="index.html">Mentorship & Internship</a>
+      <a href="about.html">About</a>
+      <a href="lettalk.html" >Let's Talk</a>
 
       </div>
       <h3>Let's Connect!</h3>
