--- a/About.html
+++ b/About.html
@@ -11,7 +11,7 @@
 <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
 <!-- <link rel="manifest" href="favicon_io/site.webmanifest"> -->
- <link rel="stylesheet" href="Style.css" type="text/css">
+ <link rel="stylesheet" href="style.css" type="text/css">
 
   <style>
     #About{
@@ -124,14 +124,14 @@
       <div class="Logo"><img src="Images/campusxchange-logo.svg" title="CampusXchange Logo"></div>
    </header>
 <div class="topnav" id="myTopnav">
-  <a href="Index.html" class="active">Home</a>
+  <a href="index.html" class="active">Home</a>
    <div class="dropdown">
     <button class="dropbtn">Services
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="Services/Webdevelopment.html">Website Development</a>
-      <a href="Services/SEO.html">SEO</a>
+      <a href="services/webdevelopment.html">Website Development</a>
+      <a href="services/seo.htmh">SEO</a>
     </div>
   </div>
   <div class="dropdown">
@@ -139,14 +139,14 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="Handouts/Notes.html">Notes</a>
-      <a href="Handouts/Blog.html">Blogs</a>
-      <a href="Handouts/Assignment.html">Programming Assignment</a>
+      <a href="handouts/notes.html">Notes</a>
+      <a href="handouts/blog.html">Blogs</a>
+      <a href="handouts/assignment.html">Programming Assignment</a>
     </div>
   </div>
-  <a href="Internship.html">Mentorship & Internship</a>
-  <a href="About.html" style="background-color: #555;">About</a>
-  <a href="Lettalk.html">Let's Talk</a>
+  <a href="internship.html">Mentorship & Internship</a>
+  <a href="about.html" style="background-color: #555;">About</a>
+  <a href="lettalk.html">Let's Talk</a>
     <!--// mobile Togglebar ----------------------------------------------------------------------------------------->
  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
