--- a/Handouts/Assignment.html
+++ b/Handouts/Assignment.html
@@ -6,8 +6,8 @@
 <meta name="description" content="CampusXchange offers expert support for programming assignments, AI/ML models, academic projects, and technical reports. Fast, reliable, and plagiarism-free.">
 <meta name="keywords" content="assignment help, programming assignment, AI project help, ML model support, web development project, technical assignment service, CampusXchange services">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="../Style.css" type="text/css">
-<link rel="stylesheet" href="../Styles/Assignment.css" type="text/css">
+<link rel="stylesheet" href="../style.css" type="text/css">
+<link rel="stylesheet" href="../styles/assignment.css" type="text/css">
 <!-- cdns-->
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <!--favicon ------------------------------------------------------------------------------>
@@ -24,14 +24,14 @@
   <div class="Logo"><img src="../Images/campusxchange-logo.svg" title="CampusXchange Logo"></div>
   </header>
 <div class="topnav" id="myTopnav">
-  <a href="../Index.html" class="active">Home</a>
+  <a href="../index.html" class="active">Home</a>
    <div class="dropdown">
     <button class="dropbtn">Services
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="../Services/Webdevelopment.html">Website Development</a>
-      <a href="../Services/SEO.html">SEO</a>
+      <a href="../services/webdevelopment.html">Website Development</a>
+      <a href="../services/seo.html">SEO</a>
     </div>
   </div>
    <div class="dropdown">
@@ -39,14 +39,14 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="Notes.html" >Notes</a>
-      <a href="Blog.html">Blogs</a>
-      <a href="Assignment.html" style="background-color: #555;">Programming Assignment</a>
+      <a href="notes.html" >Notes</a>
+      <a href="blog.html">Blogs</a>
+      <a href="assignment.html" style="background-color: #555;">Programming Assignment</a>
     </div>
   </div>
-  <a href="../Internship.html">Mentorship & Internship</a>
-  <a href="../About.html">About</a>
-  <a href="../Lettalk.html">Let's Talk</a>
+  <a href="../internship.html">Mentorship & Internship</a>
+  <a href="../about.html">About</a>
+  <a href="../lettalk.html">Let's Talk</a>
     <!--// mobile Togglebar ----------------------------------------------------------------------------------------->
  <a href="#" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
@@ -127,7 +127,7 @@
     <br>
     <p><strong>Need a project? </strong>Let's build it together — fast, reliable, and submission-ready.</p>
     <br>
-    <a href="../Services/Webdevelopment.html">Request Your Project Now →</a>
+    <a href="../services/webdevelopment.html">Request Your Project Now →</a>
 
   </section>
   <!-- descreption cta For My core services ------------------------------------------------------------------------------>
@@ -161,6 +161,9 @@
    Yes, we build real-world web solutions for small businesses, startups, coaching institutes, NGOs, etc. This includes website development, landing pages, admin panels, and more. </div>
   </div>
 </section>
+</main>
+<button id="whatsappbtn"><img src="../Images/whatsapp-logo.png" alt="whatsapp-logo Image"></button>
+
 <br>
     <!-- FAQ section  end here---------------------------------------------------------------------------------->
   <!-- fotter section  --------------------------------------------------------------------------------->
@@ -173,16 +176,15 @@
 </div>
      <h3>Quick Links-</h3>
      <div  id="quicklinks">
-        <a href="#">Home</a>
-        <a href="#about-section">Notes</a>
-        <a href="#Courses-section">Blogs</a>
-        <a href="#Results-section">Assignment</a>
-        <a href="#Contact-section">Website Development</a>
-        <a href="#Contact-section">SEO</a>
-        <a href="#Contact-section">Internship</a>
-        <a href="#Contact-section">About us</a>
-        <a href="#Contact-section">Let's Talk</a>
-
+  <a href="../index.html" class="active">Home</a>
+  <a href="../services/webdevelopment.html">Website Development</a>
+  <a href="../services/seo.html">SEO</a>
+  <a href="notes.html" >Notes</a>
+  <a href="blog.html">Blogs</a>
+  <a href="assignment.html" style="background-color: #757c76; padding: 4px;">Programming Assignment</a>
+  <a href="../internship.html">Mentorship & Internship</a>
+  <a href="../about.html">About</a>
+  <a href="../lettalk.html">Let's Talk</a>
       </div>
       <h3>Let's Connect!</h3>
       <div class="contact">
