--- a/Services/Webdevelopment.html
+++ b/Services/Webdevelopment.html
@@ -5,14 +5,14 @@
 <meta name="description" content="Get fast, secure, and SEO-optimized websites tailored to your business needs. CampusXchange offers custom web development services, responsive design, and full-stack solutions to help your brand grow online.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="keywords" content="Custom web development services , Web application development services , Website design and development services , Responsive Website Design ,SEO-Friendly Website ">
-<link rel="stylesheet" href="../Style.css" type="text/css">
-<link rel="stylesheet" href="../Styles/Webdev.css" type="text/css">
+<link rel="stylesheet" href="../style.css" type="text/css">
+<link rel="stylesheet" href="../styles/webdev.css" type="text/css">
   <!-- cdns-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!--favicon ------------------------------------------------------------------------------>
 <link rel="apple-touch-icon" sizes="180x180" href="../favicon_io/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="../favicon_io/favicon-32x32.png">
-<link rel="icon" type="image/pnS" sizes="16x16" href="../favicon_io/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="16x16" href="../favicon_io/favicon-16x16.png">
 <link rel="manifest" href="../favicon_io/site.webmanifest">
 </head>
 <body>
@@ -26,14 +26,14 @@
   <div class="Logo"><img src="../Images/campusxchange-logo.svg" title="CampusXchange Logo"></div>
   </header>
 <div class="topnav" id="myTopnav">
-  <a href="../Index.html" class="active">Home</a>
+  <a href="../index.html" class="active">Home</a>
    <div class="dropdown">
     <button class="dropbtn">Services
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="Webdevelopment.html" style="background-color: #555;">Website Development</a>
-      <a href="SEO.html" >SEO</a>
+      <a href="webdevelopment.html" style="background-color: #555;">Website Development</a>
+      <a href="seo.html" >SEO</a>
     </div>
   </div>
    <div class="dropdown">
@@ -41,14 +41,14 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="../Handouts/Notes.html">Notes</a>
-      <a href="../Handouts/Blog.html">Blogs</a>
-      <a href="../Handouts/Assignment.html">Programming Assignment</a>
+      <a href="../handouts/notes.html">Notes</a>
+      <a href="../handouts/blog.html">Blogs</a>
+      <a href="../handouts/assignment.html">Programming Assignment</a>
     </div>
   </div>
-  <a href="../Internship.html">Mentorship & Internship</a>
-  <a href="../About.html">About</a>
-  <a href="../Lettalk.html">Let's Talk</a>
+  <a href="../index.html">Mentorship & Internship</a>
+  <a href="../about.html">About</a>
+  <a href="../lettalk.html">Let's Talk</a>
     <!--// mobile Togglebar ----------------------------------------------------------------------------------------->
  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
@@ -68,7 +68,7 @@
 
 </p>
 <br>
-    <a href="#" title="Click here.."><button>Launch with Confidence →</button></a>
+    <a href="#pricingplan" title="Click here.."><button>Launch with Confidence →</button></a>
 </div>
 </div>
   </section>
@@ -86,6 +86,17 @@
     </section>
      <!-- section for what we offer in webdevelopment end here  ------------------------------->
       <br>
+      <section class="block webdevprocess">
+  <h2>Our Process: From Idea to Impact -</h2>
+  <div class="block processbox">Discovery & Requirement Analysis</div>
+  <div class="block processbox">Planning & Wireframing</div>
+  <div class="block processbox">UI/UX & Front-End Development</div>
+  <div class="block processbox">Back-End Development</div>
+  <div class="block processbox">Testing & Qestion Ans.</div>
+  <div class="block processbox">Launch & Deployment</div>
+  <div class="block processbox" id="tabstyle">Post-Launch Support</div>
+</section>
+<br>
 <section class="block techlang">
    <h2> Tech Stack We Work With -</h2>
    <div class="techlangbox"><span>Front-End</span><br><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" alt="HTML-logo"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original-wordmark.svg" alt="CSS-log"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" alt="JavaScript-logo"> <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg" alt="React-logo"/></div>
@@ -95,19 +106,9 @@
    <div class="techlangbox"><span>Server</span><br><img src="../Images/bluehostLogo.webp"><img src="../Images/HostingerLogo.webp"></div>
 </section>
 <br>
-<section class="block webdevprocess">
-  <h2>Our Process: From Idea to Impact -</h2>
-  <div class="block processbox">Discovery & Requirement Analysis</div>
-  <div class="block processbox">Planning & Wireframing</div>
-  <div class="block processbox">UI/UX & Front-End Development</div>
-  <div class="block processbox">Back-End Development</div>
-  <div class="block processbox">Testing & Qestion Ans.</div>
-  <div class="block processbox">Launch & Deployment</div>
-  <div class="block processbox">Post-Launch Support</div>
-</section>
-<br>
+<!-- for showing our clients  -->
 <section class="block ourstatus">
-<div class="ourstatushero">  <h2>Our Happy Clients "</h2>
+<div class="ourstatushero">  <h2>Our Happy Clients </h2>
 
 <div class="client-slider" id="sliderBox">
   <div class="clients-images" id="slider">
@@ -123,7 +124,57 @@
 <br>
 </div>
 </section>
+<!-- for showing our clients section end here  -->
+ <br>
+ <section class="pricingplan" id="pricingplan">
+ <div class="block plancategory"><div class="planheader">Basic (₹499 to ₹999)</div><div class="plancontent">
+  <ul>
+  <li>❌No Free Domain</li>
+  <li>✅1-5 static pages</li>
+  <li>✅Responsive design </li>
+  <li>✅Basic contact form</li>
+  <li>✅WhatsApp/Email integration</li>
+  <li>✅Speed optimization</li>
+  <li>❌SEO optimization</li>
+  <li>✅1 Week delivery</li>
+  <li>✅7 days free support</li>
+</ul>
+<span>Ideal for: Students, freelancers, consultants, and small startups.</span></div></div>
+ <div class="block plancategory"><div class="planheader">Standard (₹5000 to ₹9,999)</div><div class="plancontent">
+  <ul>
+  <li>✅Free custom Domain</li>
+  <li>✅Up to 10 pages (dynamic/static mix)</li>
+  <li>✅Custom design + animations</li>
+  <li>✅Admin panel or CMS (optional)</li>
+  <li>✅Blog or Gallery module</li>
+  <li>✅Social media & Google Maps integration</li>
+  <li>❌API integration (payment, CRM, etc.)</li>
+  <li>✅SEO-ready structure</li>
+  <li>✅2 Weeks delivery</li>
+  <li>✅15 days free support</li>
+</ul>
+<span>Ideal for: Agencies, mid-size businesses, service providers.</span></div></div>
+ <div class="block plancategory"><div class="planheader">Premium (₹9,999 to ₹14,999)</div><div class="plancontent">
+  <ul>
+  <li>✅Unlimited pages</li>
+  <li>✅Dynamic admin dashboard</li>
+  <li>✅Custom backend (PHP + MySQL)</li>
+  <li>✅API integration (payment, CRM, etc.)</li>
+  <li>✅Advance SEO setup</li>
+  <li>✅Performance + security optimization</li>
+  <li>✅4-5 weeks delivery</li>
+  <li>✅30 days free support + Maintenance option</li>
+</ul>
+<span>Ideal for: Startups, online stores, scalable business platforms.</span></div></div>
+ </section>
+ <br>
+ <div class="doughtplanprice">
+🤔 Not sure which package fits your needs? Click below and let’s discuss it on WhatsApp.
+<br><br>
+<a href="https://wa.me/9155726625?text=Hi%20there!%20I'm%20interested%20in%20your%20web%20development%20services%20but%20need%20help%20choosing%20the%20right%20plan." target="_blank" title="👋Say Hey!"><button><i class="fa-brands fa-whatsapp" style="color: #53f547;"></i> Chat with us on WhatsApp</button></a></div>
 </main>
+<button id="whatsappbtn"><img src="../Images/whatsapp-logo.png" alt="whatsapp-logo Image"></button>
+<button id="movebtn" onclick="movetopFunction()"> <img src="../Images/Scrolltotop.png" alt="whatsapp-logo Image"></button>
 <br>
   <!-- fotter section  --------------------------------------------------------------------------------->
         <section class="Footer">
@@ -135,16 +186,15 @@
 </div>
      <h3>Quick Links-</h3>
      <div  id="quicklinks">
-        <a href="#">Home</a>
-        <a href="#about-section">Notes</a>
-        <a href="#Courses-section">Blogs</a>
-        <a href="#Results-section">Assignment</a>
-        <a href="#Contact-section">Website Development</a>
-        <a href="#Contact-section">SEO</a>
-        <a href="#Contact-section">Internship</a>
-        <a href="#Contact-section">About us</a>
-        <a href="#Contact-section">Let's Talk</a>
-
+      <a href="../index.html" class="active">Home</a>
+      <a href="webdevelopment.html" style="background-color: #757c76; padding: 4px;">Website Development</a>
+      <a href="seo.html" >SEO</a>
+      <a href="../handouts/notes.html">Notes</a>
+      <a href="../handouts/blog.html">Blogs</a>
+      <a href="../handouts/assignment.html">Programming Assignment</a>
+      <a href="../index.html">Mentorship & Internship</a>
+      <a href="../about.html">About</a>
+      <a href="../lettalk.html88">Let's Talk</a>
       </div>
 <br>
 <br>
@@ -173,14 +223,14 @@
 <script src="../script.js"></script>
    <script>
             // for portfolio section slider .....................................................................
-  const slider = document.getElementById("slider");
-  const total = slider.children.length;
+  const webpageslider = document.getElementById("slider");
+  const totalsliderln = webpageslider.children.length;
   let currentIndex = 0;
 
   const numberContainer = document.getElementById("numberContainer");
 
   // Create numbered buttons
-  for (let i = 0; i < total; i++) {
+  for (let i = 0; i < totalsliderln; i++) {
     const btn = document.createElement("span");
     btn.classList.add("num-btn");
     btn.textContent = i + 1;
@@ -188,47 +238,22 @@
     btn.setAttribute("data-index", i);
     btn.addEventListener("click", () => {
       currentIndex = i;
-      updateSlider();
+      updatewebpageSlider();
     });
     numberContainer.appendChild(btn);
   }
 
-  function updateSlider() {
-    slider.style.transform = `translateX(-${currentIndex * 100}%)`;
+  function  updatewebpageSlider() {
+    webpageslider.style.transform = `translateX(-${currentIndex * 100}%)`;
     document.querySelectorAll(".num-btn").forEach(btn => btn.classList.remove("active"));
     document.querySelectorAll(".num-btn")[currentIndex].classList.add("active");
   }
 
   // Auto scroll
   setInterval(() => {
-    currentIndex = (currentIndex + 1) % total;
-    updateSlider();
+    currentIndex = (currentIndex + 1) % totalsliderln;
+    updatewebpageSlider();
   }, 2000);
-
-  // Swipe support for mobile only ...........................................................................................
-  const sliderBox = document.getElementById("sliderBox");
-  let startX = 0;
-
-  sliderBox.addEventListener("touchstart", (e) => {
-    startX = e.touches[0].clientX;
-  });
-
-  sliderBox.addEventListener("touchend", (e) => {
-    const endX = e.changedTouches[0].clientX;
-    const diff = startX - endX;
-
-    if (diff > 50) {
-      currentIndex = (currentIndex + 1) % total;
-    } else if (diff < -50) {
-      currentIndex = (currentIndex - 1 + total) % total;
-    }
-
-    updateSlider();
-  });
-
-
-      //POrtfolio  Response form validation .......................................................................................
-
          </script>
 </body>
 </html>
