--- a/Testing/T2.html
+++ b/Testing/T2.html
@@ -2,13 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>CampusXchange Blog – Learn & Explore</title>
-  <meta name="description" content="Explore trending technical blogs on AI, Programming, Data Science, and Development. Read full posts on the same page – by CampusXchange.">
-  <style>
-
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
+  <body style='margin: 0; padding:10px; background-color: #f4f4f4; font-family: Arial, sans-serif; line-height: 1.2; color: #333;'>
+    <div style='max-width: 1000px; margin: auto; padding: 30px; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1);'>
+        <img src='https://pankajdas0025.github.io/CampusXchange/Images/Hero.jpg' height='auto' width='100%' style='margin-top: 25px; border-radius: 15px 15px 0px 0px; font-size:2rem;'>
+        <h1 style='color: #ffffff;padding:10px;height:150px; background: linear-gradient(to right, #6366f1,#f43f5e); text-align: center; font-size:1.5rem;'>🎉 Thank You for your interest
+            <br><p style='font-size: 1rem;'>$name</p>
+        </h1>
 
+        <div style='background-color: #ecf0f1; padding: 10px; border-radius: 5px; margin-top: 20px;'>
+            Tired of boring resumes? Let your portfolio speak for you!
+            <p>🌟 <strong>Our Support Team will contact you within 24 Hr.</strong></p>
+            <p>Be Happy with CampusXchange</p>
+        </div>
 
+        <div style='margin-top: 30px; font-size: 0.9em; color: #555; border-top: 1px solid #ddd; padding-top: 20px;'>
+            <p>Connect with us:</p>
+            <ul style='padding-left: 20px;'>
+                <li>LinkedIn: <a href='#' style='color: #2980b9;'>CampusXchange</a></li>
+                <li>Telegram: <a href='https://t.me/CampusXchange' target='_blank' style='color: #2980b9;'>https://t.me/CampusXchange</a></li>
+                <li>Email: <a href='#' style='color: #2980b9;'>support@CampusXchange</a></li>
+                <li>Website: <a href='https://pankajdas0025.github.io/CampusXchange/' target='_blank' style='color: #2980b9;'>www.CampusXchange.org</a></li>
+            </ul>
+        </div>
+    </div>
+    </body>
+</body>
+</html>
