--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta property="og:description" content="Innovative IT solutions, digital marketing services, and practical learning opportunities for students.">
 <!-- <meta property="og:image" content="banner.png">
 <meta property="og:url" content="#"> -->
-<link rel="stylesheet" href="Style.css" type="text/css">
+<link rel="stylesheet" href="style.css" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
  <!--favicon ------------------------------------------------------------------------------>
@@ -46,8 +46,8 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="Services/Webdevelopment.html" title="Web Development From CampusXchange">Website Development</a>
-      <a href="Services/SEO.html">SEO</a>
+      <a href="services/webdevelopment.html" title="Web Development From CampusXchange">Website Development</a>
+      <a href="services/seo.html">SEO</a>
     </div>
   </div>
   <div class="dropdown">
@@ -55,14 +55,14 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="Handouts/Notes.html" title="Technical Notes">Notes</a>
-      <a href="Handouts/Blog.html" title="Scripted Blogs">Blogs</a>
-      <a href="Handouts/Assignment.html " title="Programing Lab Assignment">Programming Assignment</a>
+      <a href="handouts/notes.html" title="Technical Notes">Notes</a>
+      <a href="handouts/blog.html" title="Scripted Blogs">Blogs</a>
+      <a href="handouts/assignment.html " title="Programing Lab Assignment">Programming Assignment</a>
     </div>
   </div>
-  <a href="Internship.html">Mentorship & Internship</a>
-      <a href="About.html">About</a>
-          <a href="Lettalk.html">Let's Talk</a>
+  <a href="internship.html">Mentorship & Internship</a>
+      <a href="about.html">About</a>
+          <a href="lettalk.html">Let's Talk</a>
     <!--// mobile Togglebar ----------------------------------------------------------------------------------------->
  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()"> &#9776;</a>
 </div>
@@ -76,10 +76,10 @@
 <section class="block hero">
 <!-- First heading tag -->
          <div class="block HeroImg">
-         <a href="Services/Webdevelopment.html"><div class="Rotate1 HerosubImg1">Website Development👋</div></a>
-         <a href="Services/SEO.html"><div class="Rotate2 HerosubImg2">SEO👋</div></a>
-         <a href="Internship.html"><div class="Rotate3 HerosubImg3">Internship👋</div></a>
-         <a href="Handouts/Notes.html"><div class="Rotate4 HerosubImg4">Notes & Assignments👋</div></a>
+         <a href="services/webdevelopment.html"><div class="Rotate1 HerosubImg1">Website Development👋</div></a>
+         <a href="services/seo.html"><div class="Rotate2 HerosubImg2">SEO👋</div></a>
+         <a href="index.html"><div class="Rotate3 HerosubImg3">Internship👋</div></a>
+         <a href="handouts/notes.html"><div class="Rotate4 HerosubImg4">Notes & Assignments👋</div></a>
 
           <img src="Images/CampusXchange-Hero-Image.png" id="Main" alt="CampusXchange-Hero-Image">
         </div>
@@ -96,7 +96,7 @@
       <h2>Ready to Make Your Mark on the World?</h2>
       <p>Do you want to create your dream website or digital brand? Let's bring your vision to life! Whether you're a business, freelancer, student, or startup looking to stand out online, we're here to help you succeed.</p>
       <br>
-      <a href="Services/Webdevelopment.html" title="Webdevelopment"><button id="Explorbtn">Let's Discuss</button></a>
+      <a href="services/webdevelopment.html" title="Webdevelopment"><button id="Explorbtn">Let's Discuss</button></a>
       <br>
      <br>
 
@@ -126,7 +126,7 @@
       <div class="typeSeo" id="seo3">Technical SEO</div>
       <div class="typeSeo" id="seo4">Local SEO</div>
       <br>
-      <a href="Services/Webdevelopment.html" title="Webdevelopment"><button id="Explorbtn2">Let's Discuss SEO</button></a>
+      <a href="services/webdevelopment.html" title="Webdevelopment"><button id="Explorbtn2">Let's Discuss SEO</button></a>
       <br>
 </section>
 <!-- SEO service cta  section  end here------------------------------------------------------------------------------------------------>
@@ -175,10 +175,7 @@ Our team of experienced developers and mentors is ready to help you with all typ
      <br>
 
                <div class="assignment-buttons"><a href="Handouts/Assignment.html" title="Programming Assignment">Go</a></div>
-                          <!-- <a href="Handouts/Assignment.html" title="Programming Assignment">WebTechnology</a>
-                                    <a href="Handouts/Assignment.html" title="Programming Assignment">DSA using C++</a>
-                    <a href="Handouts/Assignment.html" title="Programming Assignment">DBMS</a>
-                            <a href="Handouts/Assignment.html" title="Programming Assignment">PHP</a> -->
+
     </section>
 <!-- Assignment section end  here ------------------------------------------------------------------------------------------------>
 <br>
@@ -194,7 +191,7 @@ At CampusXchange, we're not just about learning — we're about doing.
 <br>
 Whether you're passionate about crafting pixel-perfect frontends or building powerful backend logic, you'll work on real-world projects under expert mentorship. Here, you'll gain full-stack experience, contribute to meaningful development, and grow into the developer the industry wants.</P>
       <br>
-      <a href="Internship.html"><button>Check Our Internship Program</button></a>
+      <a href="internship.html"><button>Check Our Internship Program</button></a>
       </div>
     </section>
     <br>
@@ -257,14 +254,14 @@ Whether you're passionate about crafting pixel-perfect frontends or building pow
      <h3>Quick Links-</h3>
      <div  id="quicklinks">
   <a href="index.html" class="active" style="background-color: #757c76; padding: 4px;">Home</a>
-  <a href="Handouts/Notes.html" title="Technical Notes">Notes</a>
-  <a href="Handouts/Blog.html" title="Scripted Blogs">Blogs</a>
-  <a href="Handouts/Assignment.html " title="Programing Lab Assignment">Programming Assignment</a>
-  <a href="Services/Webdevelopment.html" title="Web Development From CampusXchange">Website Development</a>
-  <a href="Services/SEO.html">SEO</a>
-  <a href="Internship.html">Mentorship & Internship</a>
-  <a href="About.html">About</a>
-  <a href="Lettalk.html">Let's Talk</a>
+  <a href="handouts/notes.html" title="Technical Notes">Notes</a>
+  <a href="handouts/blog.html" title="Scripted Blogs">Blogs</a>
+  <a href="handouts/assignment.html" title="Programing Lab Assignment">Programming Assignment</a>
+  <a href="services/webdevelopment.html" title="Web Development From CampusXchange">Website Development</a>
+  <a href="services/seo.html">SEO</a>
+  <a href="index.html">Mentorship & Internship</a>
+  <a href="about.html">About</a>
+  <a href="lettalk.html">Let's Talk</a>
 
       </div>
 <br>
@@ -289,8 +286,10 @@ Whether you're passionate about crafting pixel-perfect frontends or building pow
         </section>
         <!-- fotter section end  --------------------------------------------------------------------------------->
   </main>
+
       <a href="Internship.html" title="Click here.."><button id="btn1">👋Join Our Internship Program</button></a>
       <button id="btn2" onclick="RemoveIpop()">&times;</button>
+      <button id="movebtn" onclick="movetopFunction()"> <img src="Images/Scrolltotop.png" alt="mototop-icon-Image"></button>
 <script src="script.js"></script>
 </body>
 </html>
