--- a/Internship.html
+++ b/Internship.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="Style.css" type="text/css">
+<link rel="stylesheet" href="style.css" type="text/css">
   <!-- cdns -->
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -24,14 +24,14 @@
       <div class="Logo"><img src="Images/campusxchange-logo.svg" title="CampusXchange Logo"></div>
    </header>
 <div class="topnav" id="myTopnav">
-  <a href="Index.html" class="active">Home</a>
+  <a href="index.html" class="active">Home</a>
    <div class="dropdown">
     <button class="dropbtn">Services
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="Services/Webdevelopment.html">Website Development</a>
-      <a href="Services/SEO.html">SEO</a>
+      <a href="services/webdevelopment.html">Website Development</a>
+      <a href="services/seo.html">SEO</a>
     </div>
   </div>
    <div class="dropdown">
@@ -39,18 +39,19 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="Handouts/Notes.html">Notes</a>
-      <a href="Handouts/Blog.html">Blogs</a>
-      <a href="Handouts/Assignment.html">Programming Assignment</a>
+      <a href="handouts/notes.html">Notes</a>
+      <a href="handouts/blog.html">Blogs</a>
+      <a href="handouts/assignment.html">Programming Assignment</a>
     </div>
   </div>
-  <a href="Internship.html" style="background-color: #555;"> Mentorship & Internship</a>
-  <a href="About.html">About</a>
-  <a href="Lettalk.html">Let's Talk</a>
+  <a href="internship.html" style="background-color: #555;"> Mentorship & Internship</a>
+  <a href="about.html">About</a>
+  <a href="lettalk.html">Let's Talk</a>
     <!--// mobile Togglebar ----------------------------------------------------------------------------------------->
  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
 <br>
+<button id="whatsappbtn"><img src="Images/whatsapp-logo.png" alt="whatsapp-logo Image"></button>
  <!-- fotter section  --------------------------------------------------------------------------------->
         <section class="Footer">
  <div class="fbox" id="lastfooter"><br>
