--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
 
 <!-- styles -->
 <link rel="stylesheet" href="style.css" type="text/css">
-<link rel="stylesheet" href="animation.css" type="text/css">
+<link rel="stylesheet" href="styles/animation.css" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
  <!--favicon ------------------------------------------------------------------------------>
@@ -91,7 +91,7 @@
          <a href="services/seo"><div class="Rotate2 HerosubImg2">SEO👋</div></a>
          <a href="home"><div class="Rotate3 HerosubImg3">Mentorship👋</div></a>
          <a href="handouts/notes"><div class="Rotate4 HerosubImg4">Notes & Assignments👋</div></a>
-          <img src="assets/Images/CampusXchange-Hero-Image.svg" id="Main" alt="Campusxchange-Hero-Image">
+          <img src="assets/Images/CampusXchange-Hero-Image.jpg" id="Main" alt="Campusxchange-Hero-Image">
         </div>
          <br>
       <h1>Your Gateway to Learning , <span style="background-color:#f43f5e; color:#FFF;padding: 1px 4px;">Development</span> & Career Excellence with Mentorship programs.</h1>
@@ -260,6 +260,8 @@ Whether you're passionate about crafting pixel-perfect frontends or building pow
 <br>
     <!-- FAQ section  end here---------------------------------------------------------------------------------->
     <!-- fotter section  --------------------------------------------------------------------------------->
+
+
     <br><section class="Footer">
  <div class="fbox" id="lastfooter"><br>
   <h3>CampusXchange</h3>
