--- a/Services/SEO.html
+++ b/Services/SEO.html
@@ -24,7 +24,7 @@
   <meta property="twitter:image" content="https://campusxchange.in/assets/og-image.jpg">
 
 <!-- styles -->
-<link rel="stylesheet" href="../animation.css" type="text/css">
+<link rel="stylesheet" href="../styles/animation.css" type="text/css">
 <link rel="stylesheet" href="../style.css" type="text/css">
   <!-- cdns -->
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
